# ros_msg_example

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/value_msg/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  AveragingAction.h  AveragingActionFeedback.h  AveragingActionGoal.h  AveragingActionResult.h  AveragingFeedback.h  AveragingGoal.h  AveragingResult.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h  value.h
devel/lib/action_client/: action_client
devel/lib/action_client_tuto/: action_client_tuto
devel/lib/action_goal/: action_goal
devel/lib/action_goal_client/: action_goal_client
devel/lib/action_goal_server/: action_goal_server
devel/lib/action_server/: action_server
devel/lib/pkgconfig/: action_client.pc  action_client_tuto.pc  action_goal.pc  action_goal_client.pc  action_goal_server.pc  action_server.pc  action_server_tuto.pc  pub_msg.pc  service_client.pc  service_server.pc  sub_msg.pc  value_msg.pc
devel/lib/pub_msg/: pub_msg
devel/lib/python2.7/dist-packages/value_msg/msg/: _AveragingAction.py  _AveragingActionFeedback.py  _AveragingActionGoal.py  _AveragingActionResult.py  _AveragingFeedback.py  _AveragingGoal.py  _AveragingResult.py  _FibonacciAction.py  _FibonacciActionFeedback.py  _FibonacciActionGoal.py  _FibonacciActionResult.py  _FibonacciFeedback.py  _FibonacciGoal.py  _FibonacciResult.py  __init__.py  _value.py
devel/lib/python2.7/dist-packages/value_msg/srv/: _AddTwoInts.py
devel/lib/service_client/: service_client
devel/lib/service_server/: service_server
devel/lib/sub_msg/: sub_msg
devel/share/action_client/cmake/: action_clientConfig.cmake
devel/share/action_client_tuto/cmake/: action_client_tutoConfig.cmake
devel/share/action_goal/cmake/: action_goalConfig.cmake
devel/share/action_goal_client/cmake/: action_goal_clientConfig.cmake
devel/share/action_goal_server/cmake/: action_goal_serverConfig.cmake
devel/share/action_server/cmake/: action_serverConfig.cmake
devel/share/action_server_tuto/cmake/: action_server_tutoConfig.cmake
devel/share/common-lisp/ros/value_msg/msg/: AveragingAction.lisp  AveragingActionFeedback.lisp  AveragingActionGoal.lisp  AveragingActionResult.lisp  AveragingFeedback.lisp  AveragingGoal.lisp  AveragingResult.lisp  FibonacciAction.lisp  FibonacciActionFeedback.lisp  FibonacciActionGoal.lisp  FibonacciActionResult.lisp  FibonacciFeedback.lisp  FibonacciGoal.lisp  FibonacciResult.lisp  _package.lisp  _package_AveragingActionFeedback.lisp  _package_AveragingActionResult.lisp  _package_AveragingFeedback.lisp  _package_AveragingGoal.lisp  _package_AveragingResult.lisp  _package_FibonacciAction.lisp  _package_FibonacciActionGoal.lisp  _package_FibonacciGoal.lisp  _package_FibonacciResult.lisp  _package_value.lisp  value.lisp  value_msg-msg.asd
devel/share/common-lisp/ros/value_msg/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  value_msg-srv.asd
devel/share/gennodejs/ros/value_msg/msg/: AveragingAction.js  AveragingActionFeedback.js  AveragingActionGoal.js  AveragingActionResult.js  AveragingFeedback.js  AveragingGoal.js  AveragingResult.js  FibonacciAction.js  FibonacciActionFeedback.js  FibonacciActionGoal.js  FibonacciActionResult.js  FibonacciFeedback.js  FibonacciGoal.js  FibonacciResult.js  _index.js  value.js
devel/share/gennodejs/ros/value_msg/srv/: AddTwoInts.js
devel/share/pub_msg/cmake/: pub_msgConfig.cmake
devel/share/roseus/ros/value_msg/: manifest.l
devel/share/roseus/ros/value_msg/msg/: AveragingAction.l  AveragingActionFeedback.l  AveragingActionGoal.l  AveragingActionResult.l  AveragingFeedback.l  AveragingGoal.l  AveragingResult.l  FibonacciAction.l  FibonacciActionFeedback.l  FibonacciActionGoal.l  FibonacciActionResult.l  FibonacciFeedback.l  FibonacciGoal.l  FibonacciResult.l  value.l
devel/share/roseus/ros/value_msg/srv/: AddTwoInts.l
devel/share/service_client/cmake/: service_clientConfig.cmake
devel/share/service_server/cmake/: service_serverConfig.cmake
devel/share/sub_msg/cmake/: sub_msgConfig.cmake
devel/share/value_msg/cmake/: value_msg-msg-extras.cmake  value_msg-msg-paths.cmake  value_msgConfig.cmake
src/action_client/: CMakeLists.txt  package.xml
src/action_client_tuto/: CMakeLists.txt
src/action_client_tuto/src/: main.cpp
src/action_goal/: CMakeLists.txt  package.xml
src/action_goal/src/: main.cpp
src/action_goal_client/: CMakeLists.txt  package.xml
src/action_goal_client/scripts/: gen_numbers.py
src/action_goal_server/: CMakeLists.txt  package.xml
src/action_server_tuto/: CMakeLists.txt
src/action_server_tuto/src/: main.cpp
src/pub_msg/: CMakeLists.txt  package.xml
src/pub_msg/include/pub_msg/: pub.hpp
src/pub_msg/nodes/: pub.cpp
src/pub_msg/src/: pub_main.cpp
src/service_client/: CMakeLists.txt
src/service_client/src/: main.cpp
src/service_server/: CMakeLists.txt
src/service_server/src/: main.cpp
src/sub_msg/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/sub_msg/include/: sub.hpp
src/sub_msg/nodes/: sub.cpp
src/sub_msg/src/: sub_main.cpp
src/value_msg/: CMakeLists.txt  package.xml
src/value_msg/msg/: value.msg
tmp/action_client/src/: main.cpp
tmp/action_goal_client/src/: main.cpp
tmp/action_goal_server/src/: main.cpp
tmp/action_server/: CMakeLists.txt  package.xml
tmp/action_server/src/: main.cpp
tmp/cona_msgs/: CMakeLists.txt  package.xml
tmp/cona_msgs/msg/: GoalPose.msg  cona_BodyTracker.msg  cona_BodyTrackerArray.msg  cona_main.msg  dsb.msg  gui.msg  lsb.msg  sound_track_num.msg
