<package format="2">
  <name>cona_msgs</name>
  <version>0.1.0</version>
  <description>The cona_msgs package</description>

  <maintainer email="jhkim@cogaplex.com">allenkim</maintainer>

  <license>COGAPLEX</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
